@@ -2757,6 +2757,11 @@ SEXP attribute_hidden do_env2list(SEXP call, SEXP op, SEXP args, SEXP rho)
     else
         FrameNames(FRAME(env), all, names, &k);
 
+    if (k == 0)
+    { // no sorting, keep NULL names
+        UNPROTECT(2);
+        return (ans);
+    }
     if (sort_nms)
     {
         // return list with *sorted* names
